--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,16 +1,25 @@
-<!-- Loop over each object in the projects array -->
-{{#each posts as |post| }}
-<div class="row mb-4 project">
-  <div class="col-md-5">
-    <h2>
-      <!-- Call helper function with triple brackets to render the emoji span as HTML -->
-      <a href="/post/{{post.id}}">{{post.title}}</a>
-    </h2>
-  </div>
-  <div class="col-md-7">
-    <p>
-      {{project.post_content}}
-    </p>
-  </div>
+
+<div class="post_list">
+  {{#if logged_in}}
+    {{#each posts as |post| }}
+      <div class="post">
+        <h2>
+          <!-- Call helper function with triple brackets to render the emoji span as HTML -->
+          <a href="/post/{{post.id}}">{{post.title}}</a>
+        </h2>
+        <p class="date">{{format_date post.date_created}}</p>
+      </div>
+    {{/each}}
+  {{else}}
+    {{#each posts as |post| }}
+      <div class="post">
+        <h2>
+          <!-- Call helper function with triple brackets to render the emoji span as HTML -->
+          <p>{{post.title}}</p>
+        </h2>
+      </div>
+    {{/each}}
+  {{/if}}
+  <!-- Loop over each object in the projects array -->
+
 </div>
-{{/each}}
