--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,34 +5,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Development Blog</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    
     <link rel="stylesheet" href="/css/style.css">
     </head>
 
     <body>
-    <div class="">
-        <header class="">
-        <h1>
-            <a href="/">Welcome to my blog!</a>
-        </h1>
-        <nav>
-            <!-- Conditionally render login or logout links -->
-            {{#if logged_in}}
-            <a href="/profile">profile</a> |
-            <button class="no-button" id="logout">logout</button>
-            {{else}}
-            <a href="/login">login</a>
-            {{/if}}
-        </nav>
+        <header>
+            <div class="container">
+                <h1>
+                    <a href="/">Welcome to my blog!</a>
+                </h1>
+            
+                <nav>
+                    <li><a href="/">Homepage</a></li>
+                    <li><a href="/dashboard">Dashboard</a></li>
+                    <li>
+                        <!-- Conditionally render login or logout links -->
+                        {{#if logged_in}}
+                        <button class="no-button" id="logout">logout</button>
+                        {{else}}
+                        <a href="/login">login</a>
+                        {{/if}}
+                    </li>
+                </nav>
+            </div>
         </header>
         <main class="container container-fluid mt-5">
         <!-- Render the sub layout -->
-        {{{ body }}}
+            {{{ body }}}
         </main>
-        <footer>
-        &copy; 2024 Chandrika Sista
+        <footer class="container">
+            &copy; 2024 Chandrika Sista
         </footer>
-    </div>
-
+    <script src="/js/scripts.js"></script>
     <!-- Render script for logged in users only -->
     {{#if logged_in}}
     <script src="/js/logout.js"></script>
