--- a/public/css/style.css
+++ b/public/css/style.css
@@ -47,6 +47,10 @@ p {
   border-radius: 5px;
   background: #D4303D;
 }
+.btn-primary.alert {
+  background: #fff;
+  color: #D4303D;
+}
 
 header {
   background-color: #D9B573;
@@ -88,6 +92,24 @@ main .login_sections {
   padding: 20px;
 }
 
+.post {
+  padding-top: 30px;
+  padding-bottom: 50px;
+}
+.post textarea {
+  min-height: 150px;
+  min-width: 600px;
+}
+
+.post_actions {
+  margin-bottom: 30px;
+}
+
+.comments {
+  padding-bottom: 20px;
+  border-bottom: 1px #0F6926 dashed;
+}
+
 form {
   margin-top: 30px;
 }
@@ -97,7 +119,7 @@ form .form_field {
   align-items: top;
   flex-direction: row;
 }
-form .form_field .add_new_comment {
+form .form_field .add_new_comment, form .form_field.column {
   flex-direction: column;
 }
 form .form_field label {
